<resources>
    <string name="ip">http://192.168.1.8:3000/</string>
    <string name="app_name">MyStudyZone</string>
    <string name="menu_network">My Pairs</string>
    <string name="menu_addTask">Add Task</string>
    <string name="menu_StudyMode">Study Now</string>
    <string name="Requests">Requests</string>
    <string name="menu_planner">Planner</string>
    <string name="notification">Notifications</string>
    <string name="desc_addTask">add Task (assignment or quiz)</string>
    <string name="home">Home</string>
    <string name="performance_desc">There is some problems in your last mathematics assignments. Consider studing more this subject</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="title_activity_addtask">AddTaskActivity</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="currentdate">CurrentDate</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="todo">TODO</string>
    <string name="addnewpairs">Add New Pairs</string>
    <string name="MonthlyView">Monthly View</string>
    <string name="choose_account">Choose Account</string>
    <string name="preferences_file_name">com.cognition.android.mailboxapp.PREFERENCES_FILE</string>
    <string name="this_app_requires_google_play_services">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="default_m">M</string>
    <string name="from">From</string>
    <string name="default_date">21/04/2018</string>
    <string name="subject">Subject</string>
    <string name="snippet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</string>
    <string name="app_requires_auth">This app requires your authorization to access your gmail account so that it can work.</string>
    <string name="device_is_offline">Device is offline</string>
    <string name="to_me">to me</string>
    <string name="an_error_occurred">An error occurred.</string>
    <string name="retry">Retry</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="compose_email">Compose email</string>
    <string name="compose">Compose</string>
    <string name="message_sent">Message sent</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="sending">Sending…</string>
    <string name="fetch_failed">Fetch failed</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="plan_study_sessions_basic">Plan Study Sessions</string>
    <string name="assign_deadline_basic">Assign Deadline</string>
    <string name="assign_subject_basic">Assign Subject</string>
    <string name="assign_grade_basic">Assign Grade</string>
    <string name="task_subject">Task Subject</string>
    <string name="_8">8</string>
    <string name="slash">/</string>
    <string name="_10">10</string>
    <string name="deadline_title">Deadline Title</string>
    <string name="assignment1">Assignment1</string>
    <string name="task_category">Task Category</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>

</resources>